--- a/src/Snapmd.Web/wwwroot/css/site.css
+++ b/src/Snapmd.Web/wwwroot/css/site.css
@@ -25,6 +25,8 @@ body {
 .snp-flex {
   flex-wrap: wrap;
   min-height: 100px;
+  align-items: center;
+  display: flex;
 }
 
 .snp-jars {
@@ -34,6 +36,7 @@ body {
 }
 
 .snp-jar {
+  box-sizing: border-box;
   display: flex;
   height: 50px;
   width: 50px;
@@ -41,8 +44,26 @@ body {
   justify-content: center;
 }
 
-.lms-flex-container {
-  display: flex;
-  flex-wrap: wrap;
-  min-height: 50px;
+.snp-jar-1 {
+  background: lightblue;
+}
+
+.snp-jar-2 {
+  background: lightgoldenrodyellow;
+}
+
+.snp-bottom-border {
+  border-bottom: 1px solid #808080;
+}
+
+.snp-thick-borders {
+  border: 2px solid #808080;
+}
+
+.snp-border-right {
+  border-right: 1px solid #808080;
+}
+
+.snp-border-right:last-child {
+  border-right: none;
 }
